--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native-gesture-handler": "~2.20.2",
     "@react-navigation/bottom-tabs": "*",
     "react-native-safe-area-context": "4.12.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "react-i18next": "*",
+    "i18next": "^23.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
