--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "i18next": "^23.2.3",
+    "expo-sharing": "~13.0.1",
+    "react-i18next": "*",
+    "expo-file-system": "~18.0.7",
     "react-native-screens": "~4.4.0",
     "@react-navigation/stack": "*",
     "@react-navigation/native": "7.0.14",
@@ -19,9 +23,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "@react-navigation/bottom-tabs": "*",
     "react-native-safe-area-context": "4.12.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "react-i18next": "*",
-    "i18next": "^23.2.3"
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
