--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "react-native-gesture-handler": "~2.20.2",
     "@react-navigation/bottom-tabs": "*",
     "react-native-safe-area-context": "4.12.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-document-picker": "~13.0.2",
+    "base-64": "*",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
