--- a/package.json
+++ b/package.json
@@ -8,25 +8,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.27",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.6",
-    "i18next": "^23.2.3",
-    "expo-sharing": "~13.0.1",
-    "react-i18next": "*",
-    "expo-file-system": "~18.0.7",
-    "react-native-screens": "~4.4.0",
-    "@react-navigation/stack": "*",
-    "@react-navigation/native": "7.0.14",
-    "react-native-vector-icons": "*",
-    "react-native-gesture-handler": "~2.20.2",
-    "@react-navigation/bottom-tabs": "*",
-    "react-native-safe-area-context": "4.12.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-document-picker": "~13.0.2",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/bottom-tabs": "*",
+    "@react-navigation/native": "7.0.14",
+    "@react-navigation/stack": "*",
     "base-64": "*",
+    "expo": "~52.0.27",
+    "expo-document-picker": "~13.0.2",
+    "expo-file-system": "~18.0.7",
+    "expo-sharing": "~13.0.1",
+    "expo-status-bar": "~2.0.1",
+    "i18next": "^23.2.3",
+    "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "*",
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-vector-icons": "*",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
