--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.3.1",
     "react-i18next": "*",
     "react-native": "0.76.6",
+    "react-native-bcrypt": "^2.4.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
